--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # ====================================
-# DAKAR POWER PREDICTION - DEPENDENCIES
+# DAKAR POWER PREDICTION - DEPENDENCIES (Déploiement)
 # ====================================
 
 # Core Data Science
@@ -9,10 +9,9 @@ scikit-learn==1.3.2
 
 # Machine Learning
 lightgbm==4.1.0
-imbalanced-learn==0.11.0
 
-# Deep Learning
-tensorflow==2.15.0
+# Deep Learning (À ajuster si lourd)
+tensorflow==2.15.0 
 
 # Visualization
 plotly==5.18.0
@@ -22,16 +21,11 @@ seaborn==0.13.0
 # Web Application
 streamlit==1.29.0
 
-# Database (Future)
+# Database
 sqlalchemy==2.0.23
-pymysql==1.1.0  # MySQL connector
-cryptography==41.0.7  # Pour MySQL
+pymysql==1.1.0 
+cryptography==41.0.7 
 
 # Utilities
 python-dotenv==1.0.0
 joblib==1.3.2
-tqdm==4.66.1
-
-# Development
-jupyter==1.0.0
-ipykernel==6.27.1
