Finalisation des configurations de déploiement (runtime.txt ajouté et requirements.txt ajusté pour Python 3.10).

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,40 @@
-# ====================================
-# DAKAR POWER PREDICTION - DEPENDENCIES (Déploiement)
-# ====================================
+====================================
 
-# Core Data Science
-pandas==2.1.4
-numpy==1.26.2
+DAKAR POWER PREDICTION - DEPENDENCIES (Déploiement)
+
+====================================
+
+Core Data Science
+
+pandas==2.0.3       # Version stable connue pour Python 3.10
+numpy==1.24.4       # Version stable connue pour Python 3.10
 scikit-learn==1.3.2
 
-# Machine Learning
+Machine Learning
+
 lightgbm==4.1.0
 
-# Deep Learning (À ajuster si lourd)
-tensorflow==2.15.0 
+Deep Learning (Lourd - Laisser 2.15.0 est acceptable avec Python 3.10)
 
-# Visualization
+tensorflow==2.15.0
+
+Visualization
+
 plotly==5.18.0
 matplotlib==3.8.2
 seaborn==0.13.0
 
-# Web Application
-streamlit==1.29.0
+Web Application
 
-# Database
+streamlit==1.28.2   # Version légèrement plus ancienne, très stable avec 3.10
+
+Database
+
 sqlalchemy==2.0.23
-pymysql==1.1.0 
-cryptography==41.0.7 
+pymysql==1.1.0
+cryptography==41.0.7
 
-# Utilities
+Utilities
+
 python-dotenv==1.0.0
 joblib==1.3.2
