--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,25 @@
-====================================
+# Dakar Power Prediction - Requirements
 
-DAKAR POWER PREDICTION - DEPENDENCIES (Déploiement)
+# Core
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
 
-====================================
+# Visualization
+plotly>=5.17.0
 
-Core Data Science
+# Machine Learning
+lightgbm>=4.0.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
 
-pandas==2.0.3       # Version stable connue pour Python 3.10
-numpy==1.24.4       # Version stable connue pour Python 3.10
-scikit-learn==1.3.2
+# Deep Learning
+tensorflow>=2.15.0
 
-Machine Learning
+# Database
+mysql-connector-python>=8.0.0
+sqlalchemy>=2.0.0
+pymysql>=1.1.0
 
-lightgbm==4.1.0
-
-Deep Learning (Lourd - Laisser 2.15.0 est acceptable avec Python 3.10)
-
-tensorflow==2.15.0
-
-Visualization
-
-plotly==5.18.0
-matplotlib==3.8.2
-seaborn==0.13.0
-
-Web Application
-
-streamlit==1.28.2   # Version légèrement plus ancienne, très stable avec 3.10
-
-Database
-
-sqlalchemy==2.0.23
-pymysql==1.1.0
-cryptography==41.0.7
-
-Utilities
-
-python-dotenv==1.0.0
-joblib==1.3.2
+# Utilities
+python-dotenv>=1.0.0
